--- a/Dev.Lau.Blazor.Authentication/Components/Pages/Counter.razor
+++ b/Dev.Lau.Blazor.Authentication/Components/Pages/Counter.razor
@@ -1,7 +1,9 @@
 ﻿@page "/counter"
+@using Dev.Lau.Blazor.Authentication.Services
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @rendermode InteractiveServer
+@inject ServiceBusService _serviceBusService;
 @* @attribute [Authorize(Policy = "Counter.Read")] @* This gives a hard 404, because I don't have this role. *@
 
 <CascadingAuthenticationState>
@@ -31,8 +33,10 @@
 @code {
     private int currentCount = 0;
 
-    private void IncrementCount()
+    private async Task IncrementCount()
     {
         currentCount++;
+
+        await _serviceBusService.Dispatch(currentCount);
     }
 }
